k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-user-center-server
  name: simple-user-center-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-user-center-server
  template:
    metadata:
      labels:
        app: simple-user-center-server
    spec:
      containers:
        - env:
            - name: MYSQL
              value: "127.0.0.1"
            - name: MYSQL_PASSWORD
              value: "123456"
            - name: MYSQL_PORT
              value: '7000'
            - name: MYSQL_USER
              value: root
            - name: MYSQL_DATABASE_NAME
              value: b_simple_user_center
            - name: REDIS
              value: '127.0.0.1:6379'
            - name: REDIS_NAME
              value: 'user_token'
            - name: REDIS_POST
              value: '6380'
            - name: KAfKA
              value: '127.0.0.1:19090'
          image: canyuegongzi/simple-user-center-server:2.0
          imagePullPolicy: IfNotPresent
          name: simple-user-center-server
          ports:
            - containerPort: 8881
